--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -87,7 +87,7 @@
   <link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | relURL }}">
   {{- end }}
   <link rel="shortcut icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon">
-  <link rel="icon" href="{{ "/images/whoami/avatar.png" | relURL }}" sizes="any" type="image/png" />
+  <link rel="icon" href="{{ "/images/whoami/avatar.jpg" | relURL }}" sizes="any" type="image/png" />
   {{ if (fileExists "static/logo.svg") -}}
   <link rel="icon" href="{{ "logo.svg" | relURL }}" sizes="any" type="image/svg+xml" />
   {{- end }}
