--- a/layouts/partials/service/google-adsense.html
+++ b/layouts/partials/service/google-adsense.html
@@ -5,8 +5,8 @@
     style="display:block; text-align:center;"
     data-ad-layout="in-article"
     data-ad-format="fluid"
-    data-ad-client="ca-pub-7394573985119069"
-    data-ad-slot="7978774206"
+    data-ad-client=""
+    data-ad-slot=""
   >
   </ins>
   <script>
