--- a/layouts/partials/head/custom-head.html
+++ b/layouts/partials/head/custom-head.html
@@ -1,2 +1,3 @@
 <script data-ad-client="ca-pub-3188913408381301" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta name="google-site-verification" content="6Lr1JYOYBpPr_cF0gBurLeEx7vTN4noje7GLPYE25yg" />
+<script src="https://www.google.com/recaptcha/api.js?render=6Lf-s2cbAAAAAA6Kl9gjssfBvIIdWp_RRuXZiRnt"></script>
